# clickhouse-connect

./: .dev_version  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION_PLAN.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION.md  README.md  benchmark.py  docker-compose.yml  entry_setup.py  playtest.py  pylintrc  pyproject.toml  setup.py  superset_config.py  test_requirements.txt
.agents/: architecture.md  review.md  server-map.md
.claude/agents/: clickhouse-server-reader.md
.docker/clickhouse/: users.xml
.docker/clickhouse/single_node/: config.xml  (+1 more)
.docker/kerberos-kdc/: Dockerfile
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binding_ci.yml  clickhouse_ci.yml  docs_sync.yml  docs_verify.yml  on_push.yml  on_release.yml  publish.yml  publish_core.yml  run_tests.yml  stresshouse-benchmark-compare.yml
click_alchemy/: __init__.py  connection.py  connector.py  cursor.py  dialect.py  superset.py
click_alchemy-test.dist-info/: entry_points.txt
click_alchemy/chtypes/: __init__.py  registry.py  typelist.py
click_alchemy/driver/: __init__.py  parser.py  rbparser.py  rowbinary.py  types.py
click_alchemy/types/: __init__.py  registry.py  typelist.py
clickhouse_connect/: VERSION  __init__.py  __version__.py  _version.py  common.py  entry_points.py  json_impl.py
clickhouse_connect-test.dist-info/: METADATA  entry_points.txt
clickhouse_connect/cc_sqlalchemy/: MIGRATING_FROM_CLICKHOUSE_SQLALCHEMY.md  __init__.py  dialect.py  engines.py  inspector.py  reflect.py  reflection.py  typemap.py  types.py
clickhouse_connect/cc_superset/: datatypes.py  engine.py
clickhouse_connect/chtypes/: __init__.py  datatypes.py  registry.py
clickhouse_connect/datatypes/: __init__.py  base.py  common.py  container.py  datatypes.py  dynamic.py  format.py  geometric.py  network.py  numeric.py  postinit.py  registry.py  special.py  standard.py  string.py  strings.py  temporal.py  tools.py  vector.py
clickhouse_connect/dbapi/: __init__.py  connection.py  connector.py  cursor.py  exceptions.py
clickhouse_connect/driver/: __init__.py  _backendclient.py  _chdbclient.py  aiohttp_client.py  asyncclient.py  asyncio.py  asyncqueue.py  backend.py  backendclient.py  base.py  baseclient.py  basedriver.py  binding.py  buffer.py  bytesource.py  chdbasync.py  chdbclient.py  client.py  common.py  compression.py  constants.py  context.py  ctypes.py  dataconv.py  ddl.py  exceptions.py  extras.py  httpadapter.py  httpclient.py  httpdriver.py  httputil.py  insert.py  kerberos.py  models.py  native.py  npquery.py  numpy.py  options.py  parser.py  query.py  (+11 more)
clickhouse_connect/driverc/: .gitignore  buffer.c  buffer.pxd  buffer.pyx  creaders.c  creaders.pyx  dataconv.pyx  npconv.pyx
clickhouse_connect/sqlalchemy/: __init__.py  datatypes.py  dialect.py
clickhouse_connect/superset/: datatypes.py  engine.py  engine_spec.py
clickhouse_connect/tools/: datagen.py  testing.py
docs/: _meta.yml  additional-options.mdx  advanced-inserting.mdx  advanced-querying.mdx  advanced-usage.mdx  driver-api.mdx  index.mdx  navigation.json  rust-codec.mdx  sqlalchemy.mdx  superset.md
examples/: benchmark.py  clear_test_databases.py  concurrency_examples.py  insert_examples.py  pandas_examples.py  params_example.py  perf_test.py  quickstart.py  read_perf.py  run_async.py  ssh_tunnels.py  write_into_file.py  write_perf.py  write_perf_test.py
rust/: BINDING_ARCHITECTURE.md  COMPLETENESS.md  Cargo.toml  README.md  RESULTS.md  bench_native_decode_strict.py  bench_query_e2e.py  e2e_query_check.py  results_decode_isolated.txt  results_query_e2e.txt  rust_client.py  streaming_demo.py  temporal_e2e_check.py
rust/ch-core-py/: Cargo.toml  README.md  pyproject.toml
rust/ch-core-py/src/: batch.rs  decoder.rs  insert.rs  lib.rs
rust/ch-core-py/src/insert/: containers.rs  fastpath.rs  json.rs  mod.rs  qbit.rs  scalar.rs  special.rs  temporal.rs  variant.rs
rust/ch-core-py/src/pyval/: containers.rs  ctx.rs  errors.rs  fixed.rs  json.rs  mod.rs  ptr.rs  qbit.rs  scalar.rs  temporal.rs  variant_dynamic.rs
rust/ch-core-py/tests/: helpers.py  test_bindings.py  test_containers.py  test_insert_fastpaths.py  test_intake_exits.py  test_json.py  test_low_cardinality.py  test_qbit.py  test_scalars.py  test_strings_special.py  test_temporal.py  test_variant_dynamic.py  test_wide_int.py
scripts/: check_public_types.py
test_dist/: .gitignore  superset_config.py
test_dist/clickhouse_connect-test.dist-info/: entry_points.txt
tests/: chtypes.py  conftest.py  entry_setup.py  helpers.py  superset_requirements.txt  test_bare_install.py  test_chtypes.py  test_requirements.txt  test_rowbinary.py  timings.py
tests/integration_tests/: IMDB_Top_250.csv  IMDB_Top_250.parquet  actors.csv  conftest.py  datasets.py  docker-compose.yml  json_test.ndjson  kerberos_manage.py  movies.csv  proxy_ca_cert.crt  test_arrow.py  test_async_client.py  test_async_features.py  test_client.py  test_config.xml  test_contexts.py  test_data_libraries.py  test_dbapi.py  test_driver.py  test_dynamic.py  test_error_handling.py  test_external_data.py  test_form_encode_query.py  test_formats.py  test_geometric.py  test_inserts.py  test_json.py  test_jwt_auth.py  test_kerberos.py  test_mid_stream_exception.py  test_multithreading.py  test_native.py  test_native_fuzz.py  test_network.py  test_numeric.py  test_numpy.py  test_pandas.py  test_pandas_compat.py  test_params.py  test_polars.py  (+13 more)
tests/test_sqlalchemy/: test_types.py
tests/test_superset/: bad_test_types.py  conftest.py  test_config.py  test_types.py
tests/tls/: test_tls.py
tests/type_check/: consumer_smoke.py  sqlalchemy_select_smoke.py
tests/typing/: client_typing.py
tests/unit_tests/: test_asyncqueue.py  test_backend_orchestration.py  test_backend_seam.py  test_bytesource.py  test_chtypes.py  test_dynamic.py  test_freethreading.py  test_pandas.py  test_pyarrow_ddl.py  test_qbit_type.py  test_streaming_source.py  test_version.py
(+137 files in other folders)
