[build-system]
requires = ["setuptools", "cython>=3.1,<4"]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "cp38-* cp39-* pp38-* pp39-*"

[tool.ruff]
target-version = "py310"
line-length = 140
force-exclude = true
extend-exclude = ["clickhouse_connect/driverc"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "N",
]
ignore = [
    "E501",
    "B905",
]

[tool.mypy]
files = ["clickhouse_connect"]
python_version = "3.10"

[[tool.mypy.overrides]]
# Optional dependencies without type stubs and the compiled Cython modules.
module = [
    "brotli.*",
    "lz4.*",
    "orjson.*",
    "pandas.*",
    "pyarrow.*",
    "tzlocal.*",
    "ujson.*",
    "clickhouse_connect.driverc.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Baseline of modules that do not yet pass type checking (issue #692).
# Remove entries as modules are annotated and pass cleanly.
module = [
    "clickhouse_connect.cc_sqlalchemy.alembic.impl",
    "clickhouse_connect.cc_sqlalchemy.alembic.utils",
    "clickhouse_connect.cc_sqlalchemy.datatypes.base",
    "clickhouse_connect.cc_sqlalchemy.datatypes.sqltypes",
    "clickhouse_connect.cc_sqlalchemy.ddl.custom",
    "clickhouse_connect.cc_sqlalchemy.ddl.tableengine",
    "clickhouse_connect.cc_sqlalchemy.dialect",
    "clickhouse_connect.cc_sqlalchemy.sql",
    "clickhouse_connect.cc_sqlalchemy.sql.preparer",
    "clickhouse_connect.driver",
    "clickhouse_connect.driver.asyncclient",
    "clickhouse_connect.driver.asyncqueue",
    "clickhouse_connect.driver.binding",
    "clickhouse_connect.driver.buffer",
    "clickhouse_connect.driver.client",
    "clickhouse_connect.driver.common",
    "clickhouse_connect.driver.compression",
    "clickhouse_connect.driver.context",
    "clickhouse_connect.driver.dataconv",
    "clickhouse_connect.driver.ddl",
    "clickhouse_connect.driver.exceptions",
    "clickhouse_connect.driver.httpclient",
    "clickhouse_connect.driver.httputil",
    "clickhouse_connect.driver.insert",
    "clickhouse_connect.driver.npquery",
    "clickhouse_connect.driver.parser",
    "clickhouse_connect.driver.query",
    "clickhouse_connect.driver.streaming",
    "clickhouse_connect.driver.summary",
    "clickhouse_connect.driver.transform",
    "clickhouse_connect.driver.types",
    "clickhouse_connect.driver.tzutil",
    "clickhouse_connect.json_impl",
    "clickhouse_connect.tools.datagen",
    "clickhouse_connect.tools.testing",
]
ignore_errors = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
env_files = ["test.env"]
asyncio_default_fixture_loop_scope = "session"
addopts = "-n 4"
