[package]
name = "ch-core-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ch_core"
crate-type = ["cdylib"]

[dependencies]
ch-core-rs = { git = "https://github.com/ClickHouse/ch-core-rs", tag = "core-dev-20260720" }
pyo3 = { version = "0.23", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = { version = "0.23", features = ["resolve-config"] }
