[package]
name = "ch-core-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ch_core"
crate-type = ["cdylib"]

[dependencies]
ch-core-rs = { git = "https://github.com/ClickHouse/ch-core-rs", tag = "v0.1.0" }
# generate-import-lib synthesizes the CPython import library when
# cross-compiling to Windows targets with no local interpreter
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib"] }

[build-dependencies]
pyo3-build-config = { version = "0.23", features = ["resolve-config"] }
